# FoddersPlaylistBot

./: .env.example  .gitignore  README.md  pyproject.toml
docs/: index.html  privacy.html  styles.css
scripts/: manage.py
src/memebot/: __init__.py  config.py  db.py  main.py  telegram_bot.py
src/memebot/content_sources/: base.py  pinterest.py  pinterest_board_ideas.py  pinterest_rss.py  pinterest_search.py  spotify.py
src/memebot/services/: autoposter.py  pinterest_web.py  voting.py
src/memebot/utils/: http.py  logging.py
